--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pydantic = "^1.9.0"
 PyMonad = "^2.4.0"
 aiohttp = "^3.8.1"
 geojson-pydantic = "^0.3.1"
+toolz = "^0.11.2"
+redis = "^4.1.2"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
