--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
    pull_request:
       branches: [main]
 jobs:
-   Run tests:
+   run-tests:
       runs-on: ubuntu-latest
       name: "Push to PyPi"
       steps:
