--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
               pip install poetry
               poetry install 
          - name: "Run tests"
-           run: python -m unittest
+           run: $(poetry env info -p)/bin/python -m unittest
