--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CC Backend Lib tests 
+name: Unittests 
 on: 
    push:
       branches: [main]
@@ -7,7 +7,7 @@ on:
 jobs:
    run-tests:
       runs-on: ubuntu-latest
-      name: "Push to PyPi"
+      name: "Run tests"
       steps:
          - uses: actions/checkout@v2
          - uses: actions/setup-python@v2
