--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ aiohttp = "^3.8.1"
 geojson-pydantic = "^0.3.1"
 toolz = "^0.11.2"
 redis = "^4.1.2"
+email-validator = "^1.1.3"
+mailjet-rest = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
