Changed cicd, added argument to mailjet emailer

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -3,18 +3,27 @@ on:
   push:
     branches: [main]
 jobs:
-  build-and-publish:
+  test-build-and-publish:
     runs-on: ubuntu-latest
-    name: "Build And Publish"
+    name: "Test, Build And Publish"
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-python@v2
         with:
           python-version: "3.8"
+
       - name: "Dependencies"
-        run: pip install poetry twine
+        run: |
+          pip install poetry twine
+          poetry install
+
+      - name: "Run tests"
+        run: $(poetry env info -p)/bin/python -m unittest
+
       - name: "Build"
         run: poetry build
+
       - name: "Publish"
         run: |
           twine upload dist/* --skip-existing --username __token__ --password ${{ secrets.PYPI_API_TOKEN }}
